# irrigation-copilot

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.cache/: forecast.sqlite
.cursor/rules/: 00_read_docs_first.mdc  10_python_quality.mdc  20_architecture_pure_engine.mdc  30_agents_strands.mdc  40_testing_and_runs.mdc
ai_docs/: 00_ARCHITECTURE.md  01_STATUS.md  PROJECT_JOURNAL.md
ai_docs/specs/: 001_mvp_scope.md  002_data_sources.md  003_agent_tools.md  004_api.md  agents.md  coefficients_sources.md  demo_scenarios.md
app/: __init__.py
app/agents/: __init__.py  agent.py  prompts.py  schemas.py  strands_agent.py  tools.py
app/api/: __init__.py  errors.py  main.py
app/api/routes/: agent.py  irrigation.py
app/api/schemas/: agent.py  irrigation.py
app/data/: __init__.py  forecast_service.py  ims_client.py  moag_client.py  moag_parser.py  station_matching.py
app/domain/: __init__.py  irrigation_engine.py  kc_catalog.py  models.py  units.py
app/storage/: __init__.py  cache.py
app/utils/: __init__.py  config.py  logging.py
data/coefficients/: README.md  avocado.json  cactus.json  citrus.json  cucumber.json  fern.json  flowering_balcony.json  generic_outdoor.json  herbs.json  leafy_houseplant.json  pepper.json  pepper_plant.json  small_tree.json  succulent.json  tomato.json  tomato_plant.json
irrigation_copilot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: demo_smoke.py  fetch_forecast.py  run_agent.py  run_agent_cli.py  smoke_test.py
tests/: conftest.py  test_agent_factory.py  test_agent_llm.py  test_agent_tools.py  test_api_agent.py  test_api_irrigation_plan.py  test_cache.py  test_engine_basic.py  test_engine_units.py  test_geo_selection.py  test_kc_catalog.py  test_moag_network.py  test_moag_parser.py
