[project]
name = "irrigation-copilot"
version = "1.0.0"
description = "AI-native irrigation planning copilot"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "requests>=2.31.0",
    "strands-agents[gemini]>=1.0.0",
    "strands-agents-tools>=0.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "network: marks tests as requiring network access (external HTTP calls)",
    "llm: marks tests as requiring LLM API access (token-costing, requires RUN_LLM_TESTS=1)",
]
# Default: skip network and llm tests. LLM tests also require RUN_LLM_TESTS=1 even if selected.
addopts = "-m \"not network and not llm\""
# Timeout for individual tests (requires pytest-timeout plugin if installed)
# timeout = 60

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

